--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/kurs_salon
 spring.datasource.username=postgres
 spring.datasource.password=ivan02082004
+spring.security.filter.dispatcher-types=request
 management.endpoints.web.exposure.include=health, beans, info
+spring.mvc.static-path-pattern=/**
+spring.web.resources.static-locations=classpath:/static/
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
 spring.jpa.show-sql=true
 logging.level.sql=debug
