--- a/src/main/resources/db/changelog/2024/12/24-01-changelog.yaml
+++ b/src/main/resources/db/changelog/2024/12/24-01-changelog.yaml
@@ -1,6 +1,24 @@
 databaseChangeLog:
   - changeSet:
-      id: 1734541411059-1
+      id: 1735057825319-1
+      author: siamo
+      objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
+      changes:
+        - createSequence:
+            incrementBy: 1
+            sequenceName: user_id_seq
+            startValue: 1
+  - changeSet:
+      id: 1735057825319-2
+      author: siamo
+      objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
+      changes:
+        - createSequence:
+            incrementBy: 1
+            sequenceName: user_role_id_seq
+            startValue: 1
+  - changeSet:
+      id: 1735057825319-3
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -28,7 +46,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: addresses
   - changeSet:
-      id: 1734541411059-2
+      id: 1735057825319-4
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -59,7 +77,7 @@ databaseChangeLog:
                   type: BIGINT
             tableName: appointments
   - changeSet:
-      id: 1734541411059-3
+      id: 1735057825319-5
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -87,7 +105,7 @@ databaseChangeLog:
                   type: DATE
             tableName: clients
   - changeSet:
-      id: 1734541411059-4
+      id: 1735057825319-6
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -112,7 +130,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: masters
   - changeSet:
-      id: 1734541411059-5
+      id: 1735057825319-7
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -140,7 +158,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: products
   - changeSet:
-      id: 1734541411059-6
+      id: 1735057825319-8
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -177,7 +195,7 @@ databaseChangeLog:
                   type: BIGINT
             tableName: purchases
   - changeSet:
-      id: 1734541411059-7
+      id: 1735057825319-9
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -205,7 +223,7 @@ databaseChangeLog:
                   type: BIGINT
             tableName: reviews
   - changeSet:
-      id: 1734541411059-8
+      id: 1735057825319-10
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -233,14 +251,13 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: services
   - changeSet:
-      id: 1734541411059-9
+      id: 1735057825319-11
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
         - createTable:
             columns:
               - column:
-                  autoIncrement: true
                   constraints:
                     nullable: false
                     primaryKey: true
@@ -248,18 +265,20 @@ databaseChangeLog:
                   name: id
                   type: BIGINT
               - column:
-                  name: name
-                  type: VARCHAR(255)
+                  name: user_authority
+                  type: SMALLINT
+              - column:
+                  name: user_id
+                  type: BIGINT
             tableName: user_roles
   - changeSet:
-      id: 1734541411059-10
+      id: 1735057825319-12
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
         - createTable:
             columns:
               - column:
-                  autoIncrement: true
                   constraints:
                     nullable: false
                     primaryKey: true
@@ -285,14 +304,29 @@ databaseChangeLog:
                   name: login
                   type: VARCHAR(255)
               - column:
+                  name: username
+                  type: VARCHAR(255)
+              - column:
                   name: password
                   type: VARCHAR(255)
               - column:
-                  name: role_id
-                  type: BIGINT
+                  constraints:
+                    nullable: false
+                  name: expired
+                  type: BOOLEAN
+              - column:
+                  constraints:
+                    nullable: false
+                  name: locked
+                  type: BOOLEAN
+              - column:
+                  constraints:
+                    nullable: false
+                  name: enabled
+                  type: BOOLEAN
             tableName: users
   - changeSet:
-      id: 1734541411059-11
+      id: 1735057825319-13
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -301,7 +335,7 @@ databaseChangeLog:
             constraintName: uc_clients_user
             tableName: clients
   - changeSet:
-      id: 1734541411059-12
+      id: 1735057825319-14
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -310,7 +344,7 @@ databaseChangeLog:
             constraintName: uc_masters_user
             tableName: masters
   - changeSet:
-      id: 1734541411059-13
+      id: 1735057825319-15
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -319,7 +353,7 @@ databaseChangeLog:
             constraintName: uc_purchases_review
             tableName: purchases
   - changeSet:
-      id: 1734541411059-14
+      id: 1735057825319-16
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -330,7 +364,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: clients
   - changeSet:
-      id: 1734541411059-15
+      id: 1735057825319-17
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -341,7 +375,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: masters
   - changeSet:
-      id: 1734541411059-16
+      id: 1735057825319-18
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -352,7 +386,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: services
   - changeSet:
-      id: 1734541411059-17
+      id: 1735057825319-19
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -363,7 +397,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: addresses
   - changeSet:
-      id: 1734541411059-18
+      id: 1735057825319-20
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -374,7 +408,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: users
   - changeSet:
-      id: 1734541411059-19
+      id: 1735057825319-21
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -385,7 +419,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: users
   - changeSet:
-      id: 1734541411059-20
+      id: 1735057825319-22
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -396,7 +430,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: appointments
   - changeSet:
-      id: 1734541411059-21
+      id: 1735057825319-23
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -407,7 +441,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: products
   - changeSet:
-      id: 1734541411059-22
+      id: 1735057825319-24
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -418,7 +452,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: reviews
   - changeSet:
-      id: 1734541411059-23
+      id: 1735057825319-25
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -429,7 +463,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: services
   - changeSet:
-      id: 1734541411059-24
+      id: 1735057825319-26
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -440,14 +474,14 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: appointments
   - changeSet:
-      id: 1734541411059-25
+      id: 1735057825319-27
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
         - addForeignKeyConstraint:
-            baseColumnNames: role_id
-            baseTableName: users
-            constraintName: FK_USERS_ON_ROLE
+            baseColumnNames: user_id
+            baseTableName: user_roles
+            constraintName: FK_USER_ROLES_ON_USER
             referencedColumnNames: id
-            referencedTableName: user_roles
+            referencedTableName: users
 
