--- a/src/main/resources/db/changelog/2024/12/04-01-changelog.yaml
+++ b/src/main/resources/db/changelog/2024/12/04-01-changelog.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1735057825319-1
+      id: 1736008840140-1
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -9,7 +9,7 @@ databaseChangeLog:
             sequenceName: user_id_seq
             startValue: 1
   - changeSet:
-      id: 1735057825319-2
+      id: 1736008840140-2
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -18,7 +18,7 @@ databaseChangeLog:
             sequenceName: user_role_id_seq
             startValue: 1
   - changeSet:
-      id: 1735057825319-3
+      id: 1736008840140-3
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -46,7 +46,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: addresses
   - changeSet:
-      id: 1735057825319-4
+      id: 1736008840140-4
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -61,7 +61,7 @@ databaseChangeLog:
                   name: id
                   type: BIGINT
               - column:
-                  name: client_id
+                  name: user_id
                   type: BIGINT
               - column:
                   name: master_id
@@ -77,35 +77,7 @@ databaseChangeLog:
                   type: BIGINT
             tableName: appointments
   - changeSet:
-      id: 1735057825319-5
-      author: siamo
-      objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
-      changes:
-        - createTable:
-            columns:
-              - column:
-                  autoIncrement: true
-                  constraints:
-                    nullable: false
-                    primaryKey: true
-                    primaryKeyName: pk_clients
-                  name: id
-                  type: BIGINT
-              - column:
-                  name: user_id
-                  type: BIGINT
-              - column:
-                  name: birth_date
-                  type: DATE
-              - column:
-                  name: address_id
-                  type: BIGINT
-              - column:
-                  name: registration_date
-                  type: DATE
-            tableName: clients
-  - changeSet:
-      id: 1735057825319-6
+      id: 1736008840140-5
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -130,7 +102,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: masters
   - changeSet:
-      id: 1735057825319-7
+      id: 1736008840140-6
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -158,7 +130,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: products
   - changeSet:
-      id: 1735057825319-8
+      id: 1736008840140-7
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -195,7 +167,7 @@ databaseChangeLog:
                   type: BIGINT
             tableName: purchases
   - changeSet:
-      id: 1735057825319-9
+      id: 1736008840140-8
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -223,7 +195,7 @@ databaseChangeLog:
                   type: BIGINT
             tableName: reviews
   - changeSet:
-      id: 1735057825319-10
+      id: 1736008840140-9
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -251,7 +223,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: services
   - changeSet:
-      id: 1735057825319-11
+      id: 1736008840140-10
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -272,7 +244,7 @@ databaseChangeLog:
                   type: BIGINT
             tableName: user_roles
   - changeSet:
-      id: 1735057825319-12
+      id: 1736008840140-11
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -301,11 +273,17 @@ databaseChangeLog:
                   name: photo
                   type: VARCHAR(255)
               - column:
-                  name: login
-                  type: VARCHAR(255)
-              - column:
                   name: username
                   type: VARCHAR(255)
+              - column:
+                  name: birth_date
+                  type: DATE
+              - column:
+                  name: address_id
+                  type: BIGINT
+              - column:
+                  name: registration_date
+                  type: DATE
               - column:
                   name: password
                   type: VARCHAR(255)
@@ -326,16 +304,7 @@ databaseChangeLog:
                   type: BOOLEAN
             tableName: users
   - changeSet:
-      id: 1735057825319-13
-      author: siamo
-      objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
-      changes:
-        - addUniqueConstraint:
-            columnNames: user_id
-            constraintName: uc_clients_user
-            tableName: clients
-  - changeSet:
-      id: 1735057825319-14
+      id: 1736008840140-12
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -344,7 +313,7 @@ databaseChangeLog:
             constraintName: uc_masters_user
             tableName: masters
   - changeSet:
-      id: 1735057825319-15
+      id: 1736008840140-13
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -353,18 +322,7 @@ databaseChangeLog:
             constraintName: uc_purchases_review
             tableName: purchases
   - changeSet:
-      id: 1735057825319-16
-      author: siamo
-      objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
-      changes:
-        - addForeignKeyConstraint:
-            baseColumnNames: client_id
-            baseTableName: appointments
-            constraintName: FK_APPOINTMENTS_ON_CLIENT
-            referencedColumnNames: id
-            referencedTableName: clients
-  - changeSet:
-      id: 1735057825319-17
+      id: 1736008840140-14
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -375,7 +333,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: masters
   - changeSet:
-      id: 1735057825319-18
+      id: 1736008840140-15
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -386,29 +344,18 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: services
   - changeSet:
-      id: 1735057825319-19
-      author: siamo
-      objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
-      changes:
-        - addForeignKeyConstraint:
-            baseColumnNames: address_id
-            baseTableName: clients
-            constraintName: FK_CLIENTS_ON_ADDRESS
-            referencedColumnNames: id
-            referencedTableName: addresses
-  - changeSet:
-      id: 1735057825319-20
+      id: 1736008840140-16
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
         - addForeignKeyConstraint:
             baseColumnNames: user_id
-            baseTableName: clients
-            constraintName: FK_CLIENTS_ON_USER
+            baseTableName: appointments
+            constraintName: FK_APPOINTMENTS_ON_USER
             referencedColumnNames: id
             referencedTableName: users
   - changeSet:
-      id: 1735057825319-21
+      id: 1736008840140-17
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -419,7 +366,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: users
   - changeSet:
-      id: 1735057825319-22
+      id: 1736008840140-18
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -430,7 +377,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: appointments
   - changeSet:
-      id: 1735057825319-23
+      id: 1736008840140-19
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -441,7 +388,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: products
   - changeSet:
-      id: 1735057825319-24
+      id: 1736008840140-20
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -452,7 +399,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: reviews
   - changeSet:
-      id: 1735057825319-25
+      id: 1736008840140-21
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -463,7 +410,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: services
   - changeSet:
-      id: 1735057825319-26
+      id: 1736008840140-22
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -474,7 +421,18 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: appointments
   - changeSet:
-      id: 1735057825319-27
+      id: 1736008840140-23
+      author: siamo
+      objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
+      changes:
+        - addForeignKeyConstraint:
+            baseColumnNames: address_id
+            baseTableName: users
+            constraintName: FK_USERS_ON_ADDRESS
+            referencedColumnNames: id
+            referencedTableName: addresses
+  - changeSet:
+      id: 1736008840140-24
       author: siamo
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
