-implementation of page-role work -PDF reporting developed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Kurs_salon
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/kurs_salon
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=ivan02082004
 spring.security.filter.dispatcher-types=request
@@ -12,3 +13,4 @@ server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=false
 spring.jpa.show-sql=true
 logging.level.sql=debug
+file.upload-dir=./src/main/resources/static/img
