--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/2024/12/04-01-changelog.yaml
+  - include:
+      file: db/changelog/2024/12/07-01-changelog.yaml
