--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Kurs_salon
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/kurs_salon
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
-spring.datasource.password=ivan02082004
+spring.config.import=optional:file:../.env[.properties],optional:file:.env[.properties]
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.security.filter.dispatcher-types=request
 management.endpoints.web.exposure.include=health, beans, info
 spring.mvc.static-path-pattern=/**
@@ -14,3 +15,4 @@ server.servlet.session.cookie.secure=false
 spring.jpa.show-sql=true
 logging.level.sql=debug
 file.upload-dir=./src/main/resources/static/img
+
